# promort_pipeline

./: CMakeLists.txt  Dockerfile  Makefile  README.md
code/: cassandra_dataset.py
code/cpp/: Makefile  batchpatchhandler.hpp  credentials.hpp  mnist_mlp_mpi.cpp  pybindings.cpp
code/examples/imagenette2-224/python/: README.md  mpi_envloader.py  mpi_functions.py  mpi_training.py
code/examples/isic_classification_2018/python/: mpi_envloader.py  mpi_functions.py  mpi_training.py
code/examples/mnist/: README.md
code/examples/mnist/cpp/: mnist_mlp_mpi.cpp
code/opt_mpi/cpp/: Makefile
code/opt_mpi/pybind/: Makefile  README.txt  bindings.cpp
code/python/: create_bindings.sh  mnist_mlp.py
code/utils/: create_bindings.sh  mnist_download.sh
cpp/: CMakeLists.txt  promort_classification_training.cpp
cpp/initializers/: CMakeLists.txt  he_init.cpp  he_init.h
cpp/models/: models.cpp  models.h
data-preprocessing/: LDA_tissue.pickle  mir.py  pipeline.org  tables.cql  tiler.py  tiler_all.py  tissue_detector.py  tissue_masks.py  tum_norm_masks.py
docker/: Dockerfile
notebooks/Evaluation/: Performance Analysis Tissue Classifier.ipynb  ROC_Analysis.ipynb
pybind11/: README.txt  bindings.cpp  build_cpp.sh  example.py  setup.py
python/: cassandra_dataset.py  cassandra_splits_tissue_filter.py  cassandra_training_example.py  create_rows_and_splits.py  dist_train.py  envloader.py  imagenet_spark_cass.py  minimpi_functions.py  minimpi_training.py  models.py  mpi_envloader.py  mpi_functions.py  mpi_training.py  promort.py  promort_cassandra.py  promort_functions.py  promort_model_evaluation.py  promort_tumor_training.py  spark_functions.py  spark_training.py  tissue_detector.py  tissue_detector_inference.py  tissue_detector_train.py
python/cassandra_utils/: cassandra_row_split_creation.py  cassandra_splits_tissue_filter.py
python/cpp/: Makefile  batchpatchhandler.cpp  batchpatchhandler.hpp  cass_pass.hpp  private_data.py  pybindings.cpp  test.cpp  test.py
python/keras/: cassandra_get_data.py  vgg16_keras2onnx.py  vgg16_load_from_numpy.py
python/miniMPI/: Makefile  miniMPI.cpp  miniMPI.hpp  pybindings.cpp  test.py
python/opt_mpi/cpp/cuda_aware_mpi/: Makefile  mnist_mlp_mpi.cpp  mpi_env.cpp  mpi_env.hpp  optim_sgd_mpi.cpp  optim_sgd_mpi.hpp
python/opt_mpi/cpp/with_cuda_rt/: Makefile  mnist_mlp_mpi.cpp  mpi_env.cpp  mpi_env.hpp  optim_sgd_mpi.cpp  optim_sgd_mpi.hpp
python/opt_mpi/pybind/: Makefile  bindings.cpp  setup.py
python/test_load_weight_from_keras/: vgg16_load_from_numpy.py
python/tissue_classifier/: models.py  tissue_detector.py  tissue_detector_train.py
